# smithy-rs

./: .pre-commit-config.yaml  Config  README.md  build.gradle.kts  gh-pages-push.sh  gradle.properties  test.sh
aws/rust-runtime/s3-customize/: Cargo.toml
aws/rust-runtime/s3-customize/python-example/: customize-s3.py
aws/rust-runtime/s3-customize/src/: custom_endpoint.rs  engine.rs  lib.rs  main.rs  model.rs
aws/rust-runtime/s3-customize/src/engine/: westeros.rs
aws/rust-runtime/s3-customize/test-data/: virtual-addressing.json  westeros.json
aws/rust-runtime/s3-customize/tests/: common.rs  private-link-it.rs  virtual-addressing-dualstack-it.rs  virtual-addressing-dualstack.rs  westeros-it.rs  westeros.rs
aws/sdk/: build.gradle.kts
codegen-test/: Cargo.toml.tmpl  README.md  build.gradle.kts  smithy-build.json
codegen-test/alexa-model/: exception.smithy  filter.smithy  main.smithy  sink.smithy  source.smithy  transform.smithy
codegen-test/model/: ffi.smithy  rest-json-extras.smithy  rest-xml-extras.smithy  rest-xml-unwrapped-errors.smithy
docs/: 404.html  endpoint.html  faq.html  index.html  overview.html  print.html  searchindex.js  searchindex.json  tenets.html
docs/smithy/: aggregate_shapes.html  endpoint.html  overview.html  recursive_shapes.html  simple_shapes.html
docs/transport/: middleware.html  operation.html  overview.html
gradle/: maincodecoverage.gradle
rust-runtime/protocol-test-helpers/: Cargo.toml
rust-runtime/protocol-test-helpers/src/: lib.rs
rust-runtime/serde-utils/: Cargo.toml
rust-runtime/serde-utils/src/: lib.rs
(+99 files in other folders)
