[package]
name = "protocol-test-helpers"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>"]
edition = "2018"
description = "A collection of library functions to validate HTTP requests against Smithy protocol tests"

[dependencies]
http = "0.2.1"
serde_json = "1"
smithy-http = { path = "../smithy-http" }
assert-json-diff = "1"
thiserror = "1"
