[package]
name = "serde-utils"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
smithy-http = { path = "../smithy-http" }
smithy-types = { path = "../smithy-types" }

[dev-dependencies]
serde_json = "1.0"
