[package]
name = "s3-customize"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
http = "0.2.4"
smithy-http = { path = "../../../rust-runtime/smithy-http" }
itertools = "0.10.1"
